--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-action-outlet",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -23,7 +23,6 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
-    "ng-packagr": "^1.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
