--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-action-outlet",
-  "version": "1.0.0-rc.1",
+  "name": "@ng-action-outlet/core",
+  "version": "1.0.0-rc.2",
   "license": "MIT",
   "homepage": "https://klemenoslaj.github.io/ng-action-outlet/",
   "repository": {
