--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-action-outlet/core",
-  "version": "1.1.0",
+  "version": "0.0.0-development",
   "license": "MIT",
   "homepage": "https://klemenoslaj.github.io/ng-action-outlet/",
   "repository": {
@@ -12,12 +12,15 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
+    "test:single-run": "ng test --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:lib": "ng-packagr -p ng-package.json",
     "docs:coverage": "compodoc ./src -p ./src/tsconfig.docs.json --disableLifeCycleHooks --disableInternal --coverageMinimumPerFile 100",
     "docs:build.prod": "yarn docs:coverage && compodoc ./src -p ./src/tsconfig.docs.json --disableLifeCycleHooks --disableInternal --disablePrivate --disableProtected --name NgActionOutlet --output docs",
-    "docs:build.serve": "compodoc ./src -p ./src/tsconfig.docs.json --disableLifeCycleHooks --disableInternal -s -w"
+    "docs:build.serve": "compodoc ./src -p ./src/tsconfig.docs.json --disableLifeCycleHooks --disableInternal -s -w",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "@angular/animations": "^5.1.0",
@@ -42,6 +45,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "cz-conventional-changelog": "^2.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -52,8 +56,15 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^1.6.0",
     "protractor": "~5.1.2",
+    "travis-deploy-once": "^5.0.9",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "semantic-release": "^15.9.16"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
