--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - ng build --prod
   - ng test --browsers ChromeHeadless --single-run
 after_success:
-  - npm run travis-deploy-once "npm run semantic-release"
+  - npm run travis-deploy-once "../node_modules/.bin/semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
