--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
+    "travis-deploy-once": "^5.0.9",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@angular/language-service": "^6.1.0",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@commitlint/travis-cli": "^7.1.2",
     "@compodoc/compodoc": "^1.1.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -57,6 +59,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^4.1.0",
     "protractor": "~5.4.0",
+    "semantic-release": "^15.9.16",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
@@ -75,5 +78,9 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "engines": {
+    "node": ">= 8.12.0",
+    "yarn": ">= 1.10.1"
   }
 }
