ci: semantic-release should publish to npm

--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-action-outlet/core",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "license": "MIT",
   "homepage": "https://klemenoslaj.github.io/ng-action-outlet/",
   "repository": {
