--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - yarn commitlint-travis
   - ng build core
-  - ng test core --browsers ChromiumHeadless --watch false
+  - ng test core --watch false
 after_success:
   - yarn travis-deploy-once "yarn semantic-release"
 branches:
