--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "^4.5.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
     "jasmine-core": "~2.99.1",
