--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^4.5.0",
+    "coveralls": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
     "jasmine-core": "~2.99.1",
