feat(angular-7): update all the Angular dependencies

--- a/angular.json
+++ b/angular.json
@@ -135,5 +135,8 @@
       }
     }
   },
-  "defaultProject": "playground"
+  "defaultProject": "playground",
+  "cli": {
+    "packageManager": "yarn"
+  }
 }
