--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.4.0",
     "travis-deploy-once": "^5.0.9",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular-devkit/build-ng-packagr": "^0.10.2",
+    "@angular-devkit/build-angular": "^0.13.3",
+    "@angular-devkit/build-ng-packagr": "^0.13.3",
     "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
@@ -58,8 +58,8 @@
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.1.3"
+    "tslint": "^5.13.0",
+    "typescript": "~3.2.0"
   },
   "release": {
     "pkgRoot": "dist/core"
