--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.0.0",
+    "@angular/cdk": "~7.3.3",
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
     "@angular/forms": "^7.0.0",
     "@angular/http": "^7.0.0",
+    "@angular/material": "~7.3.3",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.4.0",
     "travis-deploy-once": "^5.0.9",
     "zone.js": "~0.8.26"
