--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "build:core": "ng build core",
-    "docs:coverage": "compodoc ./projects/core -p ./projects/core/tsconfig.docs.json --disableLifeCycleHooks --disableInternal --coverageMinimumPerFile 100",
-    "docs:build.prod": "yarn docs:coverage && compodoc ./projects/core -p ./projects/core/tsconfig.docs.json --disableLifeCycleHooks --disableInternal --disablePrivate --disableProtected --name NgActionOutlet --output docs",
-    "docs:build.serve": "compodoc ./projects/core -p ./projects/core/tsconfig.docs.json --disableLifeCycleHooks --disableInternal -s -w"
+    "docs:coverage": "compodoc -p ./tsconfig.docs.json --disableLifeCycleHooks --disableInternal --coverageMinimumPerFile 100",
+    "docs:build.prod": "yarn docs:coverage && compodoc -p ./tsconfig.docs.json --disableLifeCycleHooks --disableInternal --disablePrivate --disableProtected --name NgActionOutlet --output docs",
+    "docs:build.serve": "compodoc -p ./tsconfig.docs.json --disableLifeCycleHooks --disableInternal -s -w"
   },
   "private": true,
   "dependencies": {
