--- a/tsconfig.docs.json
+++ b/tsconfig.docs.json
@@ -1,11 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
     "module": "es2015",
     "types": []
   },
-  "include": [
-    "src/lib/**/*"
-  ]
+  "include": ["projects/core/src/lib/**/*"]
 }
