--- a/projects/material/package.json
+++ b/projects/material/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@ng-action-outlet/material",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/core": "^7.2.0",
+    "@angular/material": "^7.2.0",
+    "@ng-action-outlet/core": "^0.0.0-development"
   }
 }
