--- a/projects/material/package.json
+++ b/projects/material/package.json
@@ -1,6 +1,16 @@
 {
   "name": "@ng-action-outlet/material",
   "version": "0.0.0-development",
+  "license": "MIT",
+  "homepage": "https://klemenoslaj.github.io/ng-action-outlet/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/klemenoslaj/ng-action-outlet.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "publishConfig": "https://registry.npmjs.org"
+  },
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0",
