build: generate sourcemaps on serve for ease of debugging

--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,12 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "playground:build"
+            "browserTarget": "playground:build",
+            "sourceMap": {
+              "vendor": true,
+              "scripts": true,
+              "styles": true
+            }
           },
           "configurations": {
             "production": {
