--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "experimentalDecorators": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "strict": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
