--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/klemenoslaj/ng-action-outlet.git"
   },
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0"
   }
 }
