--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.4",
-    "@angular/cdk": "^8.1.4",
+    "@angular/cdk": "~8.0.0",
     "@angular/common": "^8.2.4",
     "@angular/compiler": "^8.2.4",
     "@angular/core": "^8.2.4",
     "@angular/forms": "^8.2.4",
-    "@angular/material": "^8.1.4",
+    "@angular/material": "~8.0.0",
     "@angular/platform-browser": "^8.2.4",
     "@angular/platform-browser-dynamic": "^8.2.4",
     "@angular/router": "^8.2.4",
