fix(material): update angular versions

--- a/projects/material/package.json
+++ b/projects/material/package.json
@@ -8,9 +8,9 @@
     "url": "https://github.com/klemenoslaj/ng-action-outlet.git"
   },
   "peerDependencies": {
-    "@angular/common": ">8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/material": "~8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/material": "^8.0.0",
     "@ng-action-outlet/core": "^0.0.0-development"
   }
 }
