chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.4",
     "travis-deploy-once": "^5.0.11",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular-devkit/build-ng-packagr": "~0.803.18",
-    "@angular/cli": "^8.3.18",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
+    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular-devkit/build-ng-packagr": "~0.803.21",
+    "@angular/cli": "^8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@commitlint/travis-cli": "^8.1.0",
@@ -66,6 +66,9 @@
     "tslib": "^1.10.0",
     "tslint": "^5.13.0",
     "typescript": "~3.5.3"
+  },
+  "resolutions": {
+    "handlebars": "4.5.3"
   },
   "release": {
     "packages": "dist",
