--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "ng build core && ng build material",
+    "build:prod": "ng build core --prod && ng build material --prod",
     "test:once": "ng test core --watch false --browsers ChromeHeadless --code-coverage",
     "docs:coverage": "compodoc -p ./tsconfig.docs.json --disableLifeCycleHooks --disableInternal --coverageMinimumPerFile 100",
     "docs:build.prod": "yarn docs:coverage && compodoc -p ./tsconfig.docs.json --disableLifeCycleHooks --disableInternal --disablePrivate --disableProtected --name NgActionOutlet --output docs",
@@ -16,35 +17,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "hammerjs": "^2.0.8",
-    "rxjs": "^6.5.4",
-    "travis-deploy-once": "^5.0.11",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
+    "@angular/common": "^10.0.0-next.6",
+    "@angular/compiler": "^9.1.6",
+    "@angular/core": "^9.1.6",
+    "@angular/forms": "^9.1.6",
+    "@angular/material": "^9.2.3",
+    "@angular/platform-browser": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/router": "^9.1.6",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular-devkit/build-ng-packagr": "~0.803.21",
-    "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular-devkit/build-ng-packagr": "~0.901.5",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler-cli": "^9.1.6",
+    "@angular/language-service": "^9.1.6",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@commitlint/travis-cli": "^8.1.0",
     "@compodoc/compodoc": "^1.1.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.12.0",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "coveralls": "^3.0.2",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.0.0",
@@ -55,20 +55,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
     "semantic-release": "^15.10.5",
     "shelljs": "^0.8.3",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.10.0",
     "tslint": "^5.13.0",
-    "typescript": "~3.5.3"
-  },
-  "resolutions": {
-    "handlebars": "4.5.3"
+    "typescript": "~3.8.3"
   },
   "release": {
     "packages": "dist",
