--- a/projects/core/tsconfig.lib.json
+++ b/projects/core/tsconfig.lib.json
@@ -13,10 +13,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "lib": [
-      "dom",
-      "es2015"
-    ]
+    "lib": ["dom", "es2015"]
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
@@ -25,8 +22,5 @@
     "strictInjectionParameters": true,
     "enableResourceInlining": true
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
