--- a/projects/playground/tsconfig.app.json
+++ b/projects/playground/tsconfig.app.json
@@ -4,11 +4,6 @@
     "outDir": "../../out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "projects/playground/src/**/*.d.ts"
-  ]
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["projects/playground/src/**/*.d.ts"]
 }
