--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,22 +14,16 @@
     "noUnusedParameters": true,
     "strict": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "paths": {
-      "@ng-action-outlet/core": [
-        "dist/core",
-        "projects/core/src/public_api.ts"
-      ],
-      "@ng-action-outlet/material": [
-        "dist/material",
-        "projects/material/src/public_api.ts"
-      ]
+      "@ng-action-outlet/core": ["dist/core", "projects/core/src/public_api.ts"],
+      "@ng-action-outlet/material": ["dist/material", "projects/material/src/public_api.ts"]
     }
+  },
+  "angularCompilerOptions": {
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "enableResourceInlining": true
   }
 }
