feat: upgrade to Angular 12 and enable partial compilation

--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,12 @@
               "projects/playground/src/styles.scss"
             ],
             "scripts": [],
-            "aot": true
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
