--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,12 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{js,ts}]
+quote_type = single
+
+[*.scss]
+indent_size = 4
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
