--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.0",
-    "@angular/cdk": "^12.0.0",
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
-    "rxjs": "^6.6.6",
-    "tslib": "^2.0.0",
+    "@angular/animations": "^13.3.0",
+    "@angular/cdk": "^13.3.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/forms": "^13.3.0",
+    "@angular/material": "^13.3.0",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/router": "^13.3.0",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
-    "@angular/language-service": "^12.0.0",
+    "@angular-devkit/build-angular": "~13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
+    "@angular/language-service": "^13.3.0",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@commitlint/travis-cli": "^8.1.0",
@@ -55,16 +55,16 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.0.0",
-    "prettier": "^2.2.1",
+    "ng-packagr": "^13.3.0",
+    "prettier": "^2.6.0",
     "protractor": "~7.0.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
     "semantic-release": "^15.10.5",
     "shelljs": "^0.8.3",
-    "ts-node": "~7.0.0",
+    "ts-node": "~10.7.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.2.4"
+    "typescript": "~4.6.2"
   },
   "release": {
     "packages": "dist",
@@ -86,7 +86,8 @@
     }
   },
   "engines": {
-    "node": ">=12.0.0 <15.0.0",
-    "yarn": ">= 1.17.3"
+    "node": "^12.20.0 || ^14.15.0 || ^16.10.0",
+    "yarn": ">=1.21.1 <2",
+    "npm": "Please use yarn instead of NPM to install dependencies"
   }
 }
